applied styling and added images

--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
   </head>
   <body>
     <header>
-      <h1>Drum Kits</h1>
+      <h1>
+        Drum Kits
+        <img src="./icons/drum.png" alt="drum-icon" />
+      </h1>
     </header>
     <main>
       <div id="container">
-        <div class="instrument-container">Crash</div>
-        <div class="instrument-container">Kick</div>
-        <div class="instrument-container">Snare</div>
-        <div class="instrument-container">Tom</div>
+        <div class="instrument-container" id="crash">Crash</div>
+        <div class="instrument-container" id="kick">Kick</div>
+        <div class="instrument-container" id="snare">Snare</div>
+        <div class="instrument-container" id="tom">Tom</div>
       </div>
     </main>
     <footer>
