--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <div class="instrument-container" id="snare">Snare</div>
         <div class="instrument-container" id="tom">Tom</div>
       </div>
+      <div id="sounds">
+        <audio src="./sounds/crash.mp3" id="crash-sound"></audio>
+        <audio src="./sounds/kick.mp3" id="kick-sound"></audio>
+        <audio src="./sounds/snare.mp3" id="snare-sound"></audio>
+        <audio src="./sounds/tom.mp3" id="tom-sound"></audio>
+      </div>
     </main>
     <footer>
       <p id="footer-paragraph"></p>
