added text that tells the user which keys play which sounds

--- a/index.html
+++ b/index.html
@@ -17,10 +17,25 @@
     </header>
     <main>
       <div id="container">
-        <div class="instrument-container" id="crash">Crash</div>
-        <div class="instrument-container" id="kick">Kick</div>
-        <div class="instrument-container" id="snare">Snare</div>
-        <div class="instrument-container" id="tom">Tom</div>
+        <div class="instrument-container" id="crash">
+          Crash
+          <p><span>A</span> Plays Crash</p>
+        </div>
+
+        <div class="instrument-container" id="kick">
+          Kick
+          <p><span>S</span> Plays Kick</p>
+        </div>
+
+        <div class="instrument-container" id="snare">
+          Snare
+          <p><span>K</span> Plays Snare</p>
+        </div>
+
+        <div class="instrument-container" id="tom">
+          Tom
+          <p><span>L</span> Plays Tom</p>
+        </div>
       </div>
       <div id="sounds">
         <audio src="./sounds/crash.mp3" id="crash-sound"></audio>
